[project]
name = "meeting-scheduler-env"
version = "0.1.0"
description = "OpenEnv environment for meeting scheduling"
authors = [
    { name = "Krish" }
]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "python-dotenv",
    "openai",
    "openenv>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"